--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>Why I want to become a developer?</h2>
+	<p>I want to become a developer because I love solving problems using technology</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
