--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h2>Why I want to become a developer?</h2>
-	<p>I want to become a developer because I love solving problems using technology</p>
+	<p> I want to become a developer because I am passionate about technology and love creating things that can solve real-world problems. 
+        Coding allows me to turn ideas into reality and continuously learn new skills. 
+        Becoming a software developer gives me the opportunity to grow, innovate, and build solutions that can help people in their daily lives.</p>	
     <script type="text/javascript" src="./script.js">
 </script>
 
